# fashion-mnist-vae

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: Visualizations & Samples.ipynb
src/fashion_mnist_vae/networks/: autoencoder.py  networks.py
src/fashion_mnist_vae/scripts/: train.py  train_nf.py  train_vae.py
src/fashion_mnist_vae/utils/: constants.py  utils.py
