[tool.poetry]
name = "fashion-mnist-vae"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
tqdm = "^4.66.1"
pandas = "^2.1.4"
minio = "^7.2.3"
pyarrow = "^14.0.2"
fastparquet = "^2023.10.1"
matplotlib = "^3.8.2"
pillow = "^10.2.0"
pyro-ppl = "^1.8.6"
seaborn = "^0.13.2"
torchvision = "^0.17.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"


[tool.poetry.group.local-dev.dependencies]
jupyterlab = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
