[tool.poetry]
name = "fashion-mnist-vae"
version = "0.1.0"
description = "Train different forms of Variational Autoencoders (VAEs) on the Fashion MNIST dataset."
authors = ["Giulia Caglia <cagliagiulia42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
pillow = "^10.2.0"
pyro-ppl = "^1.8.6"
torchvision = "^0.17.0"
dill = "^0.3.8"
click = "^8.1.7"
zuko = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"


[tool.poetry.group.local-dev.dependencies]
jupyterlab = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
